<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <TextView
        android:id="@+id/massTV"
        android:labelFor="@id/massET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_distance"
        android:layout_marginBottom="@dimen/margin_distance"
        android:text="@string/mass"
        app:layout_constraintBottom_toTopOf="@+id/massET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/massET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_distance"
        android:layout_marginEnd="@dimen/margin"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/heightET"
        app:layout_constraintEnd_toStartOf="@+id/massIV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/heightET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/heightIV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/massET"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/heightTV"
        android:labelFor="@id/heightET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginBottom="@dimen/margin_distance"
        android:text="@string/height"
        app:layout_constraintBottom_toTopOf="@+id/heightET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/massET"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/countBTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:onClick="count"
        android:text="@string/count_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/bmiTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_distance"
        android:onClick="viewDescription"
        android:text="@string/empty_value"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bmiIV"
        app:layout_constraintTop_toBottomOf="@+id/countBTN" />

    <ImageView
        android:id="@+id/bmiIV"
        android:layout_width="@dimen/icon_big"
        android:layout_height="@dimen/icon_big"
        android:onClick="viewDescription"
        app:layout_constraintBottom_toBottomOf="@+id/bmiTV"
        app:layout_constraintEnd_toStartOf="@+id/bmiTV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bmiTV"
        app:srcCompat="@drawable/bmi"
        android:contentDescription="@string/bmi_icon" />

    <ImageView
        android:id="@+id/massIV"
        android:layout_width="@dimen/icon_small"
        android:layout_height="@dimen/icon_small"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintBottom_toBottomOf="@+id/massET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/massTV"
        app:srcCompat="@drawable/mass"
        android:contentDescription="@string/mass_icon" />

    <ImageView
        android:id="@+id/heightIV"
        android:layout_width="@dimen/icon_small"
        android:layout_height="@dimen/icon_small"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintBottom_toBottomOf="@+id/heightET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/heightTV"
        app:srcCompat="@drawable/height"
        android:contentDescription="@string/height_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>